--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -22,3 +22,20 @@ body
     font-size: 20px;
 
 }
+#cabecera
+{
+    background-color: #44c;
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+    box-shadow: 0px 5px 30px 0px rgba(0, 0, 0, 0,5);
+
+
+}
+#cabecera #tagline
+{
+    padding: 0 0 0 1rem;
+    font-weight: normal;
+    font-size: 0.8em;
+}
