cambio color cabecera

--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -24,7 +24,7 @@ body
 }
 #cabecera
 {
-    background-color: #44c;
+    background-color: red;
     color: white;
     font-weight: bold;
     margin: 0;
